--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -82,17 +82,31 @@
    <div class="container works">
       <h1 class="title">WORKS</h1>
 
-      <div class="row clearfix">
-         <img src="{{ static('image/aod_gray.png') }}" class="aod-logo" data-scroll-target="aod"
-              alt="AOD"/>
-         <img src="{{ static('image/lemaker_gray.png') }}" class="lemaker-logo"
-              data-scroll-target="lemaker" alt="LeMaker"/>
-         <img src="{{ static('image/aod_gray.png') }}" class="zj-logo" data-scroll-target="zj"
-              alt="Zhongjie"/>
-         <img src="{{ static('image/aod_gray.png') }}" class="tq-logo" data-scroll-target="tq"
-              alt="Tianqing"/>
-         <img src="{{ static('image/lemaker_gray.png') }}" class="lft-logo"
-              data-scroll-target="lft" alt="Lifengtang"/>
+      <div class="work-logos-wap">
+         <div class="work-logo" data-scroll-target="aod">
+            <div class="bg"></div>
+            <div class="logo aod-logo"></div>
+         </div>
+
+         <div class="work-logo" data-scroll-target="lemaker">
+            <div class="bg"></div>
+            <div class="logo lemaker-logo"></div>
+         </div>
+
+         <div class="work-logo" data-scroll-target="zj">
+            <div class="bg"></div>
+            <div class="logo zj-logo"></div>
+         </div>
+
+         <div class="work-logo" data-scroll-target="tq">
+            <div class="bg"></div>
+            <div class="logo tq-logo"></div>
+         </div>
+
+         <div class="work-logo" data-scroll-target="lft">
+            <div class="bg"></div>
+            <div class="logo lft-logo"></div>
+         </div>
       </div>
    </div>
 
