--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -32,6 +32,118 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
+@-webkit-keyframes orangeIn {
+  0% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+}
+@-moz-keyframes orangeIn {
+  0% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+}
+@-ms-keyframes orangeIn {
+  0% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+}
+@keyframes orangeIn {
+  0% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+}
+@-webkit-keyframes orangeOut {
+  0% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+  100% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
+@-moz-keyframes orangeOut {
+  0% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+  100% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
+@-ms-keyframes orangeOut {
+  0% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+  100% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
+@keyframes orangeOut {
+  0% {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 0.95;
+  }
+  100% {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
 #page-index .navbar {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -109,13 +221,50 @@
   text-align: center;
   padding-bottom: 70px;
 }
-#page-index .works img {
-  display: inline-block;
-  height: 47px;
-  margin-left: 50px;
+#page-index .works .work-logos-wap {
+  width: 810px;
+  margin: 0 auto;
 }
-#page-index .works img:first-child {
+#page-index .works .work-logos-wap .work-logo {
+  width: 140px;
+  height: 140px;
+  float: left;
+  margin-left: 25px;
+  position: relative;
+  cursor: pointer;
+  border-radius: 2px;
+  background-color: #f4f4f5;
+}
+#page-index .works .work-logos-wap .work-logo:first-child {
   margin-left: 0;
+}
+#page-index .works .work-logos-wap .work-logo .bg {
+  -webkit-animation: orangeOut 0.4s ease;
+  animation: orangeOut 0.4s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 2px;
+  background-color: #36a9e5;
+  opacity: 0;
+}
+#page-index .works .work-logos-wap .work-logo .logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(/static/image/lemaker_gray.png) no-repeat center;
+}
+#page-index .works .work-logos-wap .work-logo .logo:hover {
+  background: url(/static/image/lemaker_light.png) no-repeat center;
+}
+#page-index .works .work-logos-wap .work-logo:hover .bg {
+  -webkit-animation: orangeIn 0.4s ease;
+  animation: orangeIn 0.4s ease;
+  opacity: 1;
 }
 #page-index .work {
   padding: 0px 0 70px 0;
