--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -239,8 +239,6 @@
   margin-left: 0;
 }
 #page-index .works .work-logos-wap .work-logo .bg {
-  -webkit-animation: orangeOut 0.4s ease;
-  animation: orangeOut 0.4s ease;
   position: absolute;
   top: 0;
   left: 0;
@@ -258,13 +256,13 @@
   height: 100%;
   background: url(/static/image/lemaker_gray.png) no-repeat center;
 }
-#page-index .works .work-logos-wap .work-logo .logo:hover {
-  background: url(/static/image/lemaker_light.png) no-repeat center;
-}
-#page-index .works .work-logos-wap .work-logo:hover .bg {
-  -webkit-animation: orangeIn 0.4s ease;
-  animation: orangeIn 0.4s ease;
-  opacity: 1;
+#page-index .works .work-logos-wap .work-logo:hover {
+  background-color: #e8e8e8;
+  transition: all 150ms ease-out;
+  -webkit-transition: all 150ms ease-out;
+  -moz-transition: all 150ms ease-out;
+  -ms-transition: all 150ms ease-out;
+  -o-transition: all 150ms ease-out;
 }
 #page-index .work {
   padding: 0px 0 70px 0;
