--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -135,7 +135,7 @@
 
     h1 {
       font-size: 65px;
-      font-weight: bold;
+      font-weight: normal;
       margin-bottom: 20px;
       margin-top: 0;
     }
@@ -232,8 +232,8 @@
         }
 
         .bg {
-          //          -webkit-animation: orangeOut 0.4s ease;
-          //          animation: orangeOut 0.4s ease;
+          //                    -webkit-animation: orangeOut 0.4s ease;
+          //                    animation: orangeOut 0.4s ease;
           position: absolute;
           top: 0;
           left: 0;
@@ -343,6 +343,12 @@
   }
 
   .contact {
+    padding-top: 70px;
+
+    h1 {
+      margin-top: 0;
+    }
+
     .map-wap {
       position: relative;
 
