--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -203,6 +203,7 @@
   line-height: 1;
   display: block;
   margin-bottom: 20px;
+  color: #36a9e5;
 }
 #page-index .services .service .title {
   font-size: 18px;
