--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -189,6 +189,7 @@
         line-height: 1;
         display: block;
         margin-bottom: 20px;
+        color: @main-color;
       }
 
       .title {
