--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -178,29 +178,29 @@
 
   .services {
     padding-bottom: 70px;
-    background-color: #EEEEEE;
+    background-color: #EEEEEF;
 
     .service {
       text-align: center;
 
       .fa,
       .iconfont {
-        font-size: 80px;
+        font-size: 85px;
         line-height: 1;
         display: block;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
         color: @main-color;
       }
 
       .title {
-        font-size: 18px;
-        margin-bottom: 15px;
+        font-size: 20px;
+        margin-bottom: 20px;
       }
 
       .gap {
         border-top: 1px solid #cccccc;
         width: 150px;
-        margin: 0 auto 15px auto;
+        margin: 0 auto 20px auto;
       }
 
       .desc {
