--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -178,7 +178,7 @@
 
   .services {
     padding-bottom: 70px;
-    background-color: #EEEEEF;
+    background-color: #EEEEEE;
 
     .service {
       text-align: center;
@@ -225,7 +225,7 @@
         position: relative;
         cursor: pointer;
         border-radius: 2px;
-        background-color: #f4f4f5;
+        background-color: #f4f4f4;
 
         &:first-child {
           margin-left: 0;
@@ -330,12 +330,17 @@
   }
 
   .techs {
+    padding-bottom: 70px;
+
     img {
       width: 80%;
     }
   }
 
   .process {
+    padding-bottom: 80px;
+    background-color: #eeeeee;
+
     p {
       font-size: 18px;
       margin-bottom: 15px;
