--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -326,41 +326,50 @@
 }
 #page-index .contact {
   padding-top: 70px;
+  padding-bottom: 70px;
+  position: relative;
 }
 #page-index .contact h1 {
   margin-top: 0;
 }
 #page-index .contact .map-wap {
-  position: relative;
-}
-#page-index .contact .map-wap .contact-panel {
   position: absolute;
-  padding: 40px 0 0 50px;
-  left: 50%;
-  height: 220px;
-  width: 500px;
-  top: 100px;
+  display: none;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  height: 460px;
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.95);
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
-  border-radius: 4px;
-}
-#page-index .contact .map-wap .contact-panel .title {
-  font-size: 24px;
-  margin-bottom: 15px;
-}
-#page-index .contact .map-wap .contact-panel ul {
-  font-size: 16px;
-}
-#page-index .contact .map-wap .contact-panel ul li {
-  margin-bottom: 10px;
-}
-#page-index .contact .map-wap .contact-panel ul li .fa,
-#page-index .contact .map-wap .contact-panel ul li .glyphicon {
-  margin-right: 10px;
 }
 #page-index .contact .map-wap #map-canvas {
   height: 460px;
+  width: 100%;
+}
+#page-index .contact .map-wap .hide-map {
+  position: absolute;
+  font-weight: lighter;
+  right: 30px;
+  top: 30px;
+  font-size: 50px;
+  z-index: 1002;
+  cursor: pointer;
+}
+#page-index .contact .text-wap {
+  padding: 30px 0 0 50px;
+}
+#page-index .contact .text-wap .title {
+  font-size: 26px;
+  margin-bottom: 24px;
+}
+#page-index .contact .text-wap ul {
+  font-size: 16px;
+}
+#page-index .contact .text-wap ul li {
+  margin-bottom: 10px;
+}
+#page-index .contact .text-wap ul li .fa,
+#page-index .contact .text-wap ul li .glyphicon {
+  margin-right: 10px;
 }
 #page-index .footer {
   margin-top: 0;
