--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -349,65 +349,59 @@
 
   .contact {
     padding-top: 70px;
+    padding-bottom: 70px;
+    position: relative;
 
     h1 {
       margin-top: 0;
     }
 
     .map-wap {
-      position: relative;
-
-      .contact-panel {
-        position: absolute;
-        padding: 40px 0 0 50px;
-        left: 50%;
-        height: 220px;
-        width: 500px;
-        top: 100px;
-        z-index: 1000;
-        background-color: rgba(255, 255, 255, .95);
-        box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
-        border-radius: 4px;
-
-        .title {
-          font-size: 24px;
-          margin-bottom: 15px;
-        }
-
-        ul {
-
-          font-size: 16px;
-
-          li {
-            margin-bottom: 10px;
-
-            .fa,
-            .glyphicon {
-              margin-right: 10px;
-            }
-          }
-        }
-
-      }
+      position: absolute;
+      display: none;
+      top: 70px;
+      left: 0;
+      width: 100%;
+      height: 460px;
+      z-index: 1000;
 
       #map-canvas {
         height: 460px;
+        width: 100%;
+      }
+
+      .hide-map {
+        position: absolute;
+        font-weight: lighter;
+        right: 30px;
+        top: 30px;
+        font-size: 50px;
+        z-index: 1002;
+        cursor: pointer;
       }
     }
 
-    //    ul {
-    //      padding: 30px 0 0 50px;
-    //      font-size: 16px;
-    //
-    //      li {
-    //        margin-bottom: 10px;
-    //
-    //        .fa,
-    //        .glyphicon {
-    //          margin-right: 10px;
-    //        }
-    //      }
-    //    }
+    .text-wap {
+      padding: 30px 0 0 50px;
+
+      .title {
+        font-size: 26px;
+        margin-bottom: 24px;
+      }
+
+      ul {
+        font-size: 16px;
+
+        li {
+          margin-bottom: 10px;
+
+          .fa,
+          .glyphicon {
+            margin-right: 10px;
+          }
+        }
+      }
+    }
   }
 
   .footer {
