--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -207,7 +207,19 @@
 
       <div class="map-wap">
          <span class="glyphicon glyphicon-remove-circle hide-map"></span>
+
          <div id="map-canvas"></div>
+      </div>
+
+      <div class="phone-wap">
+         <span class="glyphicon glyphicon-remove hide-phone"></span>
+
+         <div class="phonenum">
+            <span class="glyphicon glyphicon-phone-alt"></span>&nbsp;&nbsp;&nbsp;1-270-303-0721
+         </div>
+         <div class="pronouciation">
+            <span class="fa fa-volume-up"></span>&nbsp;&nbsp;TUI is pronouced /too-ee/
+         </div>
       </div>
 
       <div class="container">
@@ -217,7 +229,7 @@
             </div>
 
             <div class="col-sm-6 text-wap">
-               <div class="title">Please feel free to contact us anytime.</div>
+               <div class="title">Please feel free to contact us at anytime.</div>
 
                <ul class="list-unstyled">
                   <li>
@@ -232,7 +244,7 @@
                      </a>
                   </li>
                   <li>
-                     <a href="javascript:void(0)">
+                     <a href="javascript:void(0)" class="show-phone">
                         <span class="glyphicon glyphicon-phone-alt"></span> 1-270-303-0721
                      </a>
                   </li>
