--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -354,12 +354,54 @@
   z-index: 1002;
   cursor: pointer;
 }
+#page-index .contact .phone-wap {
+  position: absolute;
+  display: none;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  height: 460px;
+  z-index: 1000;
+  background-color: #2e353b;
+  color: #d0d3d8;
+  text-align: center;
+}
+#page-index .contact .phone-wap .phonenum {
+  padding-top: 135px;
+  font-size: 80px;
+  margin-bottom: 20px;
+}
+#page-index .contact .phone-wap .phonenum span {
+  font-size: 70px;
+  color: #50575E;
+}
+#page-index .contact .phone-wap .pronouciation {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: lighter;
+  padding: 8px 18px;
+  border-radius: 2px;
+  background-color: #42494e;
+  color: #d0d3d8;
+}
+#page-index .contact .phone-wap .pronouciation span {
+  color: #6F757A;
+}
+#page-index .contact .phone-wap .hide-phone {
+  position: absolute;
+  font-weight: lighter;
+  right: 30px;
+  top: 30px;
+  font-size: 50px;
+  z-index: 1002;
+  cursor: pointer;
+}
 #page-index .contact .text-wap {
-  padding: 30px 0 0 50px;
+  padding: 50px 0 0 50px;
 }
 #page-index .contact .text-wap .title {
   font-size: 26px;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 }
 #page-index .contact .text-wap ul {
   font-size: 16px;
