rm contact from nav

--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -56,9 +56,9 @@
             <li data-scroll-target="process">
                <a href="{{ url_for('site.index') }}#process">PROCESS</a>
             </li>
-            <li data-scroll-target="contact">
-               <a href="{{ url_for('site.index') }}#contact">CONTACT</a>
-            </li>
+            {#            <li data-scroll-target="contact">#}
+            {#               <a href="{{ url_for('site.index') }}#contact">CONTACT</a>#}
+            {#            </li>#}
 
             {% if g.user %}
                <li id="nav-settings">
