--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -203,10 +203,10 @@
    </div>
 
    <div class="contact">
-      <h1 class="title">CONTACT</h1>
+      {#      <h1 class="title">CONTACT</h1>#}
 
       <div class="map-wap">
-         <span class="glyphicon glyphicon-remove-circle hide-map"></span>
+         <span class="glyphicon glyphicon-remove hide-map"></span>
 
          <div id="map-canvas"></div>
       </div>
