--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -330,10 +330,26 @@
   }
 
   .techs {
-    padding-bottom: 70px;
-
-    img {
+    img.tech-icons {
+      padding-bottom: 70px;
       width: 80%;
+    }
+
+    .screen {
+      text-align: center;
+
+      &.design-screen {
+        text-align: left;
+      }
+
+      &.right-screen {
+        text-align: right;
+      }
+
+      img {
+        width: 95%;
+        display: inline-block;
+      }
     }
   }
 
