--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -170,7 +170,18 @@
       <div class="container">
          <h1 class="title">TECHS</h1>
 
-         <img class="img-responsive center-block" src="{{ static('image/techs.png') }}" alt=""/>
+         <img class="img-responsive center-block tech-icons" src="{{ static('image/techs.png') }}"
+              alt=""/>
+
+         <div class="row screen">
+            <div class="col-sm-6 design-screen">
+               <img src="{{ static('image/tech-screen.png') }}" class="img-responsive" alt=""/>
+            </div>
+            <div class="col-sm-6 tech-screen">
+               <img src="{{ static('image/tech-screen.png') }}" class="img-responsive" alt=""/>
+            </div>
+         </div>
+
       </div>
    </div>
 
