update text in index page and layout

--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -121,7 +121,7 @@
             <span class="text-main">TUI</span> Studio
          </div>
 
-         <div class="slogan">Let Our Apps Help Connect With Your Clients.</div>
+         <div class="slogan">Let Our Workforce Help Connect With Your Clients.</div>
       </div>
    </div>
 </div>
