--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -15,7 +15,7 @@
          <div class="banner-text">
             <h1 class="text-center">Boost Your Business With US</h1>
 
-            <p class="text-center">TUI Studio is a passionate team focusing on Web solutions.</p>
+            <p class="text-center">TUI Studio is an innovative marketplace focusing on Intelligence as a Service for Web solutions.</p>
          </div>
 
          <ul class="icons list-inline list-unstyled">
