--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -121,7 +121,7 @@
             <span class="text-main">TUI</span> Studio
          </div>
 
-         <div class="slogan">Let Our Workforce Help Connect With Your Clients.</div>
+         <div class="slogan">Let our workforce finish the last mile so can you connect with your clients for the long haul.</div>
       </div>
    </div>
 </div>
