--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -64,7 +64,7 @@
                <div class="form-group">
                   <textarea rows=8 id="desc" name="desc"
                             class="form-control {% if form.desc.errors %}field-error{% endif %}"
-                            placeholder="Let us do the heavy lifting. What's on your mind?">{{ form.desc.data or "" }}</textarea>
+                            placeholder="Let our workforce do the heavy lifting. What's on your mind?">{{ form.desc.data or "" }}</textarea>
                </div>
 
                <div class="form-group">
