--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -15,7 +15,8 @@
          <div class="banner-text">
             <h1 class="text-center">Boost Your Business With US</h1>
 
-            <p class="text-center">TUI Studio is an innovative marketplace focusing on Intelligence as a Service for Web solutions.</p>
+            <p class="text-center">TUI Studio is an innovative marketplace focusing on Intelligence
+               as a Service for Web solutions.</p>
          </div>
 
          <ul class="icons list-inline list-unstyled">
@@ -50,8 +51,10 @@
 
                <div class="gap"></div>
 
-               <p class="desc">Description about Web & Mobile service. Description about Web &
-                  Mobile service.</p>
+               <p>From a sale man to a sale force.</p>
+
+               <p class="desc">We design, build and market Web and mobile apps for a better
+                  outreach, under your own brand.</p>
             </div>
 
             <div class="col-sm-4 service">
@@ -61,8 +64,10 @@
 
                <div class="gap"></div>
 
-               <p class="desc">Description about Web & Mobile service. Description about Web &
-                  Mobile service.</p>
+               <p>From a spread sheet to a data service.</p>
+
+               <p class="desc">We publish location information powered by open source and
+                  proprietary software, on your own map.</p>
             </div>
 
             <div class="col-sm-4 service">
@@ -72,8 +77,10 @@
 
                <div class="gap"></div>
 
-               <p class="desc">Description about Web & Mobile service. Description about Web &
-                  Mobile service.</p>
+               <p>From a work machine to a work place.</p>
+
+               <p class="desc">We deploy private cloud computing, storage & hosting and support
+                  complex sysOps and devOps, in your own office.</p>
             </div>
          </div>
       </div>
@@ -236,7 +243,7 @@
       <div class="container">
          <div class="row">
             <div class="col-sm-6 image-wap">
-               <img class="img-responsive" src="{{ static('image/usa_map.jpg') }}" alt=""/>
+               <img class="img-responsive" src="{{ static('image/USMAP.jpg') }}" alt=""/>
             </div>
 
             <div class="col-sm-6 text-wap">
