--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -75,12 +75,16 @@ a {
   }
 
   .navbar-header {
-    padding-top: 15px;
+    padding-top: 0px;
     .transition(200ms);
 
     .navbar-brand {
+      img {
+        width: 60px;
+      }
+
       display: inline-block;
-      padding-bottom: 20px;
+      padding: 10px 0 0 20px;
       font-size: 22px;
 
       sup {
