--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -34,7 +34,8 @@
    <div class="container">
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
-            <span class="text-main">TUI</span> <span class="text-black">Studio</span>
+            <img src="{{ static('image/logo.png') }}" alt=""/>
+            {#            <span class="text-main">TUI</span> <span class="text-black">Studio</span>#}
          </a>
       </div>
 
@@ -121,7 +122,9 @@
             <span class="text-main">TUI</span> Studio
          </div>
 
-         <div class="slogan">Let our workforce finish the last mile so can you connect with your clients for the long haul.</div>
+         <div class="slogan">Let our workforce finish the last mile so can you connect with your
+            clients for the long haul.
+         </div>
       </div>
    </div>
 </div>
