--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -243,7 +243,7 @@
       <div class="container">
          <div class="row">
             <div class="col-sm-6 image-wap">
-               <img class="img-responsive" src="{{ static('image/USMAP.jpg') }}" alt=""/>
+               <img class="img-responsive" src="{{ static('image/USMAP.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-6 text-wap">
