--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -362,6 +362,11 @@
       font-size: 18px;
       margin-bottom: 25px;
     }
+
+    img {
+      max-width: 200px;
+      border-radius: 5px;
+    }
   }
 
   .contact {
