--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -198,23 +198,23 @@
 
          <div class="row">
             <div class="col-sm-3 text-center">
-               <p>Discover & Plan</p>
-               <img src="http://placehold.it/150x150" alt=""/>
+               {#               <p>Discover & Plan</p>#}
+               <img src="{{ static('image/process/1.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               <p>Concept & Refine</p>
-               <img src="http://placehold.it/150x150" alt=""/>
+               {#               <p>Concept & Refine</p>#}
+               <img src="{{ static('image/process/2.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               <p>Build & Deploy</p>
-               <img src="http://placehold.it/150x150" alt=""/>
+               {#               <p>Build & Deploy</p>#}
+               <img src="{{ static('image/process/3.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               <p>Grow & Measure</p>
-               <img src="http://placehold.it/150x150" alt=""/>
+               {#               <p>Grow & Measure</p>#}
+               <img src="{{ static('image/process/4.png') }}" alt=""/>
             </div>
          </div>
       </div>
