add animation to process

--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -366,6 +366,13 @@
     img {
       max-width: 200px;
       border-radius: 5px;
+      cursor: pointer;
+      .transition();
+
+      &:hover {
+        margin-top: -10px;
+      }
+
     }
   }
 
