--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -338,6 +338,15 @@
 #page-index .process img {
   max-width: 200px;
   border-radius: 5px;
+  cursor: pointer;
+  transition: all 150ms ease-out;
+  -webkit-transition: all 150ms ease-out;
+  -moz-transition: all 150ms ease-out;
+  -ms-transition: all 150ms ease-out;
+  -o-transition: all 150ms ease-out;
+}
+#page-index .process img:hover {
+  margin-top: -10px;
 }
 #page-index .contact {
   padding-top: 80px;
