fix misspelling Tianqin

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -164,7 +164,7 @@
 
    <div class="work tq">
       <div class="container clearfix">
-         <h1>Tianqing</h1>
+         <h1>Tianqin</h1>
 
          <div class="image-wap">
             <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
