update logo and favicon

--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -6,7 +6,7 @@
    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
    {% block meta %}{% endblock %}
-   <link rel="Shortcut Icon" href="{{ static('image/favicon.ico') }}">
+   <link rel="Shortcut Icon" href="{{ static('image/favicon.png') }}">
    {{ link('bower_components/bootstrap/dist/css/bootstrap.min.css') }}
    {{ link('bower_components/font-awesome/css/font-awesome.min.css') }}
    {{ link('css/bootstrap.theme.css') }}
