--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -35,7 +35,6 @@
       <div class="navbar-header">
          <a class="navbar-brand" href="{{ url_for('site.index') }}">
             <img src="{{ static('image/logo.png') }}" alt=""/>
-            {#            <span class="text-main">TUI</span> <span class="text-black">Studio</span>#}
          </a>
       </div>
 
@@ -49,7 +48,7 @@
                <a href="{{ url_for('site.index') }}#services">SERVICES</a>
             </li>
             <li data-scroll-target="works">
-               <a href="{{ url_for('site.index') }}#works">WORKS</a>
+               <a href="{{ url_for('site.index') }}#works">STARTUPS</a>
             </li>
             <li data-scroll-target="techs">
                <a href="{{ url_for('site.index') }}#techs">TECHS</a>
