--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -87,7 +87,7 @@
    </div>
 
    <div class="container works">
-      <h1 class="title">WORKS</h1>
+      <h1 class="title">STARTUPS</h1>
 
       <div class="work-logos-wap">
          <div class="work-logo" data-scroll-target="aod">
@@ -198,22 +198,18 @@
 
          <div class="row">
             <div class="col-sm-3 text-center">
-               {#               <p>Discover & Plan</p>#}
                <img src="{{ static('image/process/1.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               {#               <p>Concept & Refine</p>#}
                <img src="{{ static('image/process/2.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               {#               <p>Build & Deploy</p>#}
                <img src="{{ static('image/process/3.png') }}" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               {#               <p>Grow & Measure</p>#}
                <img src="{{ static('image/process/4.png') }}" alt=""/>
             </div>
          </div>
