fix typos in index page

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -51,7 +51,7 @@
 
                <div class="gap"></div>
 
-               <p>From a sale man to a sale force.</p>
+               <p>From a salesman to a sales force.</p>
 
                <p class="desc">We design, build and market Web and mobile apps for a better
                   outreach, under your own brand.</p>
