--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -121,8 +121,10 @@
             <span class="text-main">TUI</span> Studio
          </div>
 
-         <div class="slogan">Let our workforce finish the last mile so can you connect with your
-            clients for the long haul.
+         <div class="slogan">
+            Let our workforce finish the last mile
+            <br>
+            so can you connect with your clients for the long haul.
          </div>
       </div>
    </div>
