add hover effect to process images

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -198,19 +198,19 @@
 
          <div class="row">
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS1.png') }}" alt=""/>
+               <img src="{{ static('image/process/PROCESS1.png') }}" class="process-img" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS2.png') }}" alt=""/>
+               <img src="{{ static('image/process/PROCESS2.png') }}" class="process-img" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS3.png') }}" alt=""/>
+               <img src="{{ static('image/process/PROCESS3.png') }}" class="process-img" alt=""/>
             </div>
 
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS4.png') }}" alt=""/>
+               <img src="{{ static('image/process/PROCESS4.png') }}" class="process-img" alt=""/>
             </div>
          </div>
       </div>
