--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -181,14 +181,10 @@
               alt=""/>
 
          <div class="row screen">
-            <div class="col-sm-6 design-screen">
-               <img src="{{ static('image/tech-screen.png') }}" class="img-responsive" alt=""/>
-            </div>
-            <div class="col-sm-6 tech-screen">
-               <img src="{{ static('image/tech-screen.png') }}" class="img-responsive" alt=""/>
-            </div>
+            <img src="{{ static('image/design-screen.png') }}" class="design-screen" alt=""/>
+            <img src="{{ static('image/love.png') }}" class="love" alt=""/>
+            <img src="{{ static('image/tech-screen.png') }}" class="tech-screen" alt=""/>
          </div>
-
       </div>
    </div>
 
