--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -339,17 +339,42 @@
     .screen {
       text-align: center;
 
-      &.design-screen {
-        text-align: left;
-      }
-
-      &.right-screen {
-        text-align: right;
-      }
-
       img {
-        width: 95%;
+        max-width: 100%;
         display: inline-block;
+      }
+
+      .design-screen {
+        width: 40%;
+      }
+
+      .tech-screen {
+        width: 40%;
+      }
+
+      .love {
+        padding: 0 20px;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .screen {
+        img {
+          display: block;
+          margin: 0 auto;
+        }
+
+        .design-screen {
+          width: 80%;
+        }
+
+        .tech-screen {
+          width: 80%;
+        }
+
+        .love {
+          padding: 25px 0px;
+        }
       }
     }
   }
