update some text

--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -54,7 +54,7 @@
                <a href="{{ url_for('site.index') }}#techs">TECHS</a>
             </li>
             <li data-scroll-target="process">
-               <a href="{{ url_for('site.index') }}#process">PROCESS</a>
+               <a href="{{ url_for('site.index') }}#process">STEPS</a>
             </li>
             {#            <li data-scroll-target="contact">#}
             {#               <a href="{{ url_for('site.index') }}#contact">CONTACT</a>#}
