--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-index{% endblock %}
-{% block page_title %}TUI Studio | Boost Your Business With US{% endblock %}
+{% block page_title %}TUI Studio | An Innovative Workforce Marketplace|Intelligence as a Service for Web Solutions{% endblock %}
 {% block page_css %}
    {{ link('css/site/index.css') }}
 {% endblock %}
@@ -15,8 +15,7 @@
          <div class="banner-text">
             <h1 class="text-center">Boost Your Business With US</h1>
 
-            <p class="text-center">TUI Studio is an innovative marketplace focusing on Intelligence
-               as a Service for Web solutions.</p>
+            <p class="text-center">TUI Studio is an innovative workforce marketplace focusing on Intelligence as a Service for Web solutions.</p>
          </div>
 
          <ul class="icons list-inline list-unstyled">
@@ -190,7 +189,7 @@
 
    <div class="process">
       <div class="container">
-         <h1 class="title">PROCESS</h1>
+         <h1 class="title">STEPS</h1>
 
          <div class="row">
             <div class="col-sm-3 text-center">
