--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -413,6 +413,7 @@
     // 地图
     .map-wap {
       position: absolute;
+      background-color: rgb(233, 234, 225);
       display: none;
       top: 0px;
       left: 0;
